--- a/BellaNapoli/BellaNapoli/Views/Shared/_Layout.cshtml
+++ b/BellaNapoli/BellaNapoli/Views/Shared/_Layout.cshtml
@@ -1,40 +1,56 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>@ViewBag.Title - Applicazione ASP.NET</title>
+    <title>BellaNapoli - Dal 1996</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link rel="icon" type="image/png" sizes="16x16" href="~/Content/imgs/16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="~/Content/imgs/32x32.png">
+    <link rel="icon" type="image/png" sizes="48x48" href="~/Content/imgs/48x48.png">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
-        <div class="container">
-            @Html.ActionLink("Nome dell'applicazione", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Attiva/Disattiva spostamento" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
-                <ul class="navbar-nav flex-grow-1">
-                    <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("API", "Index", "Help", new { area = "" }, new { @class = "nav-link" })</li>
-                </ul>
-            </div>
+    <nav class="navbar navbar-expand-md navbar-toggleable-md navbar-dark">
+        <img class="navbar-brand ms-3" src="~/Content/imgs/logo.png" alt="logo" width="110" />
+        <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Attiva/Disattiva spostamento" aria-controls="navbarSupportedContent"
+                aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse d-md-inline-flex justify-content-between">
+            <ul class="navbar-nav ms-auto">
+                <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link fs-3 me-3" })</li>
+                <li>@Html.ActionLink("Storia", "Index", "Help", new { area = "" }, new { @class = "nav-link fs-3 me-3" })</li>
+                <li>@Html.ActionLink("Le nostre pizze", "Index", "Prodotti", new { area = "" }, new { @class = "nav-link fs-3 me-3" })</li>
+                @if (User.Identity.IsAuthenticated)
+                {
+                    <li>@Html.ActionLink("Logout", "Logout", "Home", new { area = "" }, new { @class = "nav-link fs-3 me-3" })</li>
+                }
+                else
+                {
+                    <li>@Html.ActionLink("Registrati", "Register", "Home", new { area = "" }, new { @class = "nav-link fs-3 me-3" })</li>
+                    <li>@Html.ActionLink("Login", "Login", "Home", new { area = "" }, new { @class = "nav-link fs-3 me-2" })</li>
+                }
+            </ul>
         </div>
     </nav>
-    <div class="container body-content">
+    <div class="body-content">
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - Applicazione ASP.NET</p>
+        <footer id="footer">
+            <p class="p-5 text-center text-white m-0">Pizzeria BellaNapoli - Tutti i diritti riservati</p>
         </footer>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
