--- a/BellaNapoli/BellaNapoli/Content/Site.css
+++ b/BellaNapoli/BellaNapoli/Content/Site.css
@@ -6,9 +6,22 @@
 /* x sottotitoli e testo */
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap');
 
+html {
+    background-color: #401B23;
+}
 
-input, select, textarea {
+body {
+    font-family: 'Comfortaa', sans-serif;
+}
+
+
+input {
     max-width: 280px;
+}
+
+.form-control {
+    background-color: #72535A !important;
+    border-radius: 0;
 }
 
 .navbar {
@@ -16,7 +29,6 @@ input, select, textarea {
     position: sticky;
     top: 0;
     z-index: 1000;
-
 }
 
 .nav-link {
@@ -61,7 +73,33 @@ input, select, textarea {
     filter: drop-shadow(0px 0px 0px black) !important;
     font-family: 'Comfortaa', sans-serif;
     font-size: 16px;
+    background-color: #51A351;
+    border-radius: 0;
 }
+
+.second-bg {
+    background: url('/Content/imgs/other-bg.png') no-repeat center center;
+    background-size: cover;
+    position: relative;
+    height: 100%;
+}
+
+.third-bg {
+    background: url('/Content/imgs/other-bg2.png') no-repeat center center;
+    background-size: cover;
+    position: relative;
+    height: 100%;
+}
+.heading {
+    position: absolute;
+    top: 27%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: 'Angkor', sans-serif;
+    color : white;
+}
+
+
 
 
 /* ------------------------------ */
@@ -77,3 +115,11 @@ input, select, textarea {
     margin-top: 72.42px !important;
 }
 
+.pizza-head {
+    font-family: 'Slackside One', sans-serif;
+}
+
+.pizza-image:hover {
+    transform: scale(1.2);
+    transition: 0.2s linear;
+}
