--- a/BellaNapoli/BellaNapoli/Views/Home/Register.cshtml
+++ b/BellaNapoli/BellaNapoli/Views/Home/Register.cshtml
@@ -4,7 +4,9 @@
     ViewBag.Title = "Register";
 }
 
-<h2>Register</h2>
+<div class="second-bg py-5">
+    <h2 class="text-center heading">Registrati</h2>
+</div>
 
 
 @using (Html.BeginForm())
@@ -12,68 +14,65 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Utenti</h4>
-        <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control" } })
+        <div class="form-group text-center">
+            @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-2 py-2" })
+            <div class="col-12 text-center">
+                @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control mx-auto text-white" } })
                 @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Cognome, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Cognome, new { htmlAttributes = new { @class = "form-control" } })
+        <div class="form-group text-center">
+            @Html.LabelFor(model => model.Cognome, htmlAttributes: new { @class = "control-label col-md-2 py-2" })
+            <div class="col-12 text-center">
+                @Html.EditorFor(model => model.Cognome, new { htmlAttributes = new { @class = "form-control mx-auto text-white" } })
                 @Html.ValidationMessageFor(model => model.Cognome, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+        <div class="form-group text-center">
+            @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2 py-2" })
+            <div class="col-12 text-center">
+                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control mx-auto text-white" } })
                 @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Psw, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Psw, new { htmlAttributes = new { @class = "form-control" } })
+        <div class="form-group text-center">
+            @Html.LabelFor(model => model.Psw, htmlAttributes: new { @class = "control-label col-md-2 py-2" })
+            <div class="col-12 text-center">
+                @Html.EditorFor(model => model.Psw, new { htmlAttributes = new { @class = "form-control mx-auto text-white" } })
                 @Html.ValidationMessageFor(model => model.Psw, "", new { @class = "text-danger" })
             </div>
         </div>
 
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.CAP, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.CAP, new { htmlAttributes = new { @class = "form-control" } })
+        <div class="form-group text-center">
+            @Html.LabelFor(model => model.CAP, htmlAttributes: new { @class = "control-label col-md-2 py-2" })
+            <div class="col-12 text-center">
+                @Html.EditorFor(model => model.CAP, new { htmlAttributes = new { @class = "form-control mx-auto text-white" } })
                 @Html.ValidationMessageFor(model => model.CAP, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Citta, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Citta, new { htmlAttributes = new { @class = "form-control" } })
+        <div class="form-group text-center">
+            @Html.LabelFor(model => model.Citta, htmlAttributes: new { @class = "control-label col-md-2 py-2" })
+            <div class="col-12 text-center">
+                @Html.EditorFor(model => model.Citta, new { htmlAttributes = new { @class = "form-control mx-auto text-white" } })
                 @Html.ValidationMessageFor(model => model.Citta, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+        <div class="form-group text-center">
+            <div class="col-12 ms-auto">
+                <input type="submit" value="Registrati" class="btn btn-success menu-button px-5 my-3" />
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
+<div class="third-bg py-5">
 </div>
 
 @section Scripts {
@@ -92,7 +91,7 @@
             "debug": false,
             "newestOnTop": false,
             "progressBar": true,
-            "positionClass": "toast-top-center",
+            "positionClass": "toast-top-right",
             "preventDuplicates": false,
             "onclick": null,
             "showDuration": "300",
