--- a/BellaNapoli/BellaNapoli/Views/Prodotti/Index.cshtml
+++ b/BellaNapoli/BellaNapoli/Views/Prodotti/Index.cshtml
@@ -5,71 +5,47 @@
 }
 
 
-<h2>Index</h2>
+<div class="second-bg py-5">
+    <h2 class="text-center heading">Le nostre pizze</h2>
+</div>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Nome)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Foto)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Foto2)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Foto3)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Prezzo)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Consegna)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Ingredienti)
-        </th>
-        <th></th>
-    </tr>
+<div class="container">
+    @Html.ActionLink("+ Aggiungi pizza", "Create", new { }, new { @class = "ms-2 btn btn-success menu-button px-5 mb-3" })
 
     @foreach (var item in Model)
     {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nome)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Foto)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Foto2)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Foto3)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Prezzo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Consegna)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Ingredienti)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.idProdotto }) |
-                @Html.ActionLink("Details", "Details", new { id = item.idProdotto }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.idProdotto })
-            </td>
-        </tr>
+        <div class="row mb-4 mx-2">
+            <div class="col-5 d-flex align-items-end justify-content-end @*bg-white shadow*@ rounded-3 rounded-start px-0 text-center">
+                <a href="@Url.Action("Details", "Prodotti", new { id = item.idProdotto })">
+                    <img class="p-3 pizza-image" src="@item.Foto" alt="Pizza" style="width:100%; max-width: 250px">
+                </a>
+            </div>
+
+            <div class="col-7 d-flex flex-column">
+                <div>
+                    <h3 class="ms-2 pizza-head display-4">@item.Nome</h3>
+                    <p class="ms-2">@item.Ingredienti</p>
+                    <div class="ms-2 d-flex">
+                        <input type="number" name="quantita" value="1" min="1" max="30">
+                        <div class="btn btn-success menu-button rounded-0 buy-button px-4 ms-2" onclick="location.href='@Url.Action("AddToCart", "Prodotti", new { id = item.idProdotto })'">@item.Prezzo.ToString("F2")€</div>
+                    </div>
+                </div>
+                <div class="mt-3">
+                    <div>
+                        <span class="ms-2">🕗</span>@item.Consegna
+                        @*@Html.ActionLink("Modifica", "Edit", new { id = item.idProdotto }) |
+                            @Html.ActionLink("Elimina", "Delete", new { id = item.idProdotto })*@
+                    </div>
+                </div>
+            </div>
+        </div>
     }
 
+</div>
 
-</table>
+<div class="third-bg py-5">
+</div>
+
 
 @* ------------------------------ TOASTS --------------------------------- *@
 
@@ -98,4 +74,31 @@
         toastr.success('@TempData["CreateMess"]')
     </script>
 }
+
+@if (TempData["CartMessage"] != null)
+{
+    <script src="~/Scripts/jquery-3.4.1.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
+    <script type="text/javascript">
+        toastr.options = {
+            "closeButton": true,
+            "debug": false,
+            "newestOnTop": false,
+            "progressBar": true,
+            "positionClass": "toast-top-right",
+            "preventDuplicates": false,
+            "onclick": null,
+            "showDuration": "300",
+            "hideDuration": "1000",
+            "timeOut": "5000",
+            "extendedTimeOut": "1000",
+            "showEasing": "swing",
+            "hideEasing": "linear",
+            "showMethod": "fadeIn",
+            "hideMethod": "fadeOut"
+        }
+        toastr.warning('@TempData["CartMessage"]')
+    </script>
+}
+
 
