--- a/BellaNapoli/BellaNapoli/Views/Shared/_Layout.cshtml
+++ b/BellaNapoli/BellaNapoli/Views/Shared/_Layout.cshtml
@@ -17,9 +17,9 @@
 
     <nav class="navbar navbar-expand-md navbar-toggleable-md navbar-dark">
         <img class="navbar-brand ms-3" src="~/Content/imgs/logo.png" alt="logo" width="110" />
-        <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Attiva/Disattiva spostamento" aria-controls="navbarSupportedContent"
+        <button type="button" class="navbar-toggler border-0 " data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Attiva/Disattiva spostamento" aria-controls="navbarSupportedContent"
                 aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon border-0"></span>
         </button>
         <div class="collapse navbar-collapse d-md-inline-flex justify-content-between">
             <ul class="navbar-nav ms-auto">
@@ -28,6 +28,7 @@
                 <li>@Html.ActionLink("Le nostre pizze", "Index", "Prodotti", new { area = "" }, new { @class = "nav-link fs-3 me-3" })</li>
                 @if (User.Identity.IsAuthenticated)
                 {
+                    <li>@Html.ActionLink("Carrello", "Index", "Carrello", new { area = "" }, new { @class = "nav-link fs-3 me-3" })</li>
                     <li>@Html.ActionLink("Logout", "Logout", "Home", new { area = "" }, new { @class = "nav-link fs-3 me-3" })</li>
                 }
                 else
