--- a/BellaNapoli/BellaNapoli/Views/Carrello/Index.cshtml
+++ b/BellaNapoli/BellaNapoli/Views/Carrello/Index.cshtml
@@ -1,88 +1,90 @@
 ﻿@model IEnumerable<BellaNapoli.Models.Prodotti>
 
-@{
-    ViewBag.Title = "Index";
-}
+@using BellaNapoli.Models
 
-<h2>Carrello</h2>
+<h2 class="text-center heading mt-1 mb-3">Carrello</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+<div class="container">
+    <div class="row">
+        <div class="col-12 col-md-8 px-2 px-md-4">
+            @foreach (var item in Model)
+            {
+                <div class="row mb-4 bg-white mx-2 shadow rounded-3">
+                    <div class="col-5  shadow rounded-3 rounded-start px-0 text-center">
+                        <a href="@Url.Action("Details", "Prodotti", new { id = item.idProdotto })">
+                            <img class="p-3" src="@item.Foto" alt="Pizza" style="width:100%; max-width: 200px">
+                        </a>
+                    </div>
 
+                    <div class="col-7 d-flex flex-column">
+                        <div>
+                            <h3 class="fs-4 mt-3">@item.Nome</h3>
+                            <div>
+                                @{
+                                    var ingredienti = item.Ingredienti.Split(',');
+                                    foreach (var ingrediente in ingredienti)
+                                    {
+                                        var (badgeColor, textColor) = ingrediente.GetBadgeColors();
+                                        <span class="badge shadow" style="background-color: @badgeColor; color: @textColor">@ingrediente</span>
+                                    }
+                                }
+                            </div>
+                            <div class="mt-4 d-flex align-items-center">
+                                @Html.ActionLink(item.Prezzo.ToString("F2") + "€ - Rimuovi", "Delete", new { id = item.idProdotto }, new { @class = "shadow btn btn-outline-danger w-100 rounded-pill" })
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            }
+        </div>
+        <div class="col-12 col-md-4 px-4 px-md-0">
+            @using (Html.BeginForm("Ordina", "Carrello", FormMethod.Post))
+            {
+                <div class="row">
+                    <div class="col-12 bg-white shadow rounded-3 mb-3">
+                        <h3 class="fs-4 my-3 fw-bold">Pizzeria BellaNapoli</h3>
+                        @if (DateTime.Now < new DateTime(DateTime.Now.Year, DateTime.Now.Month, DateTime.Now.Day, 18, 30, 0))
+                        {
+                            <p class="text-orange mb-0 pb-0"><span class="fw-bolder">Chiusi</span> • 18.30 - 23.00</p>
+                            <p class="text-orange m-0 p-0 mb-2">Il tuo ordine verra' evaso dalle 18.30</p>
+                        }
+                        else
+                        {
+                            <p class="text-success mb-0 pb-0"><span class="fw-bolder">Aperti</span> • Fino alle 23:00</p>
+                            <p class="text-success m-0 p-0 mb-2">Il tuo ordine verra' evaso il prima possibile</p>
+                        }
+                    </div>
 
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Nome)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Foto)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Foto2)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Foto3)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Prezzo)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Consegna)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Ingredienti)
-        </th>
-        <th></th>
-    </tr>
+                    <div class="col-12 bg-white shadow rounded-3 mb-3">
+                        <div class="input-group my-3">
+                            <span class="input-group-text border-end-0"><i class="bi bi-list"></i></span>
+                            <input class="border-start-0 form-control rounded-0 rounded-end delivery" value="Consegna a domicilio" readonly style="pointer-events: none; cursor: default;">
+                        </div>
 
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nome)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Foto)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Foto2)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Foto3)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Prezzo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Consegna)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Ingredienti)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.idProdotto }) |
-                @Html.ActionLink("Details", "Details", new { id = item.idProdotto }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.idProdotto })
-            </td>
-        </tr>
-    }
+                        <div class="input-group my-3">
+                            <span class="input-group-text"><i class="bi bi-geo-alt-fill text-danger"></i></span>
+                            <input placeholder="Il tuo indirizzo" type="text" class="bg-white form-control rounded-0 rounded-end" id="indirizzo" name="indirizzo" required>
+                        </div>
+                    </div>
+                    <div class="col-12 bg-white shadow rounded-3 mb-5">
+                        <h3 class="fs-4 my-3 fw-bolder">Riepilogo ordine</h3>
+                        @foreach (var item in Model)
+                        {
+                            <p>1x @item.Nome - @item.Prezzo.ToString("F2")€</p>
+                        }
 
-</table>
+                        <textarea placeholder="Note aggiuntive sul tuo ordine..." id="note" name="note" required class="form-control bg-white rounded-3" rows="3" style="resize: none;"></textarea>
+                        @{
+                            double mediaMinuti = Model.Average(item => item.Consegna.TotalMinutes);
+                            TimeSpan mediaConsegna = TimeSpan.FromMinutes(mediaMinuti);
+                        }
+                        <p class="m-0 p-0 mt-3 mb-2">Consegna stimata: @mediaConsegna.TotalMinutes.ToString("F0") minuti</p>
 
-@using (Html.BeginForm("Ordina", "Carrello", FormMethod.Post))
-{
-    <div class="input-group">
-        <span class="input-group-text">Note</span>
-        <textarea id="note" name="note" required class="form-control" aria-label="With textarea"></textarea>
-    </div>
-
-    <div class="mb-3">
-        <div class="input-group">
-            <span class="input-group-text" id="basic-addon3">Indirizzo</span>
-            <input type="text" class="form-control" id="indirizzo" name="indirizzo" required aria-describedby="basic-addon3 basic-addon4">
+                        <p>Totale: @Model.Sum(item => item.Prezzo).ToString("F2")€</p>
+                        <input type="submit" class="btn btn-success menu-button w-100 p-2 mb-3" value="Conferma" />
+                    </div>
+                </div>
+            }
         </div>
     </div>
-    <input type="submit" value="Ordina" />
-}
+</div>
