--- a/BellaNapoli/BellaNapoli/Content/Site.css
+++ b/BellaNapoli/BellaNapoli/Content/Site.css
@@ -1,27 +1,20 @@
 ﻿
-/* x titoli pizze e navbar */
-@import url('https://fonts.googleapis.com/css2?family=Slackside+One&display=swap');
-/* x titoli pagine */
-@import url('https://fonts.googleapis.com/css2?family=Angkor&display=swap');
-/* x sottotitoli e testo */
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Literata:ital,opsz,wght@0,7..72,200..900;1,7..72,200..900&display=swap');
 
-html {
-    background-color: #401B23;
-}
 
 body {
-    font-family: 'Comfortaa', sans-serif;
+    font-family: 'Literata', cursive;
+    font-style: italic;
+    background: url('imgs/background-test.png');
+    background-size: cover;
 }
 
-
 input {
-    max-width: 280px;
+    max-width: 700px !important;
 }
 
 .form-control {
-    background-color: #72535A !important;
-    border-radius: 0;
+    background-color: gainsboro;
 }
 
 .navbar {
@@ -32,14 +25,14 @@ input {
 }
 
 .nav-link {
-    font-family: 'Slackside One', sans-serif;
+    font-family: 'Literata', sans-serif;
 }
 
 #bg-img {
     background: url('/Content/imgs/background.png') no-repeat center center fixed;
     background-size: cover;
     height: 100vh;
-    margin-top: -194px;
+    margin-top: -192px;
 }
 
 #pizza {
@@ -47,21 +40,23 @@ input {
     background-size: cover;
     position: relative;
     height: 100vh;
-    margin-top: -194px;
+    margin-top: -192px;
 }
 
 #title {
     color: white;
-    font-family: 'Angkor', sans-serif;
     position: absolute;
+    font-weight: 2000;
     top: 45%;
     left: 50%;
     right: -20%;
     transform: translate(-50%, -50%);
+    text-transform: uppercase;
+    font-style: normal;
+    font-weight: 900;
 }
 
 #subtitle {
-    font-family: 'Comfortaa', sans-serif;
     padding: 0;
     margin: 0;
     font-size: 0.8em;
@@ -70,56 +65,62 @@ input {
 }
 
 .menu-button {
-    filter: drop-shadow(0px 0px 0px black) !important;
-    font-family: 'Comfortaa', sans-serif;
     font-size: 16px;
-    background-color: #51A351;
     border-radius: 0;
 }
 
-.second-bg {
-    background: url('/Content/imgs/other-bg.png') no-repeat center center;
-    background-size: cover;
-    position: relative;
-    height: 100%;
-}
 
-.third-bg {
-    background: url('/Content/imgs/other-bg2.png') no-repeat center center;
-    background-size: cover;
-    position: relative;
-    height: 100%;
-}
 .heading {
-    position: absolute;
-    top: 27%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-family: 'Angkor', sans-serif;
-    color : white;
+    font-size: 3em;
+    font-style: italic;
 }
 
+.text-orange {
+    color: #FFA500;
+}
 
+.delivery {
+    background-color: #EAECEF;
+}
 
 
 /* ------------------------------ */
 #footer {
     background-color: #401B23;
-    padding: 0;
-    margin: 0;
-    font-family: 'Comfortaa', sans-serif;
     letter-spacing: 2px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 
 .toast {
     margin-top: 72.42px !important;
 }
 
-.pizza-head {
-    font-family: 'Slackside One', sans-serif;
-}
-
 .pizza-image:hover {
     transform: scale(1.2);
     transition: 0.2s linear;
+}
+
+/*----------------------------------------------------*/
+
+::-webkit-scrollbar {
+    width: 8px; 
+}
+
+
+::-webkit-scrollbar-track {
+    background: #401B23;
+}
+
+
+::-webkit-scrollbar-thumb {
+    background-color: #CCCCCC;
+    border-radius: 10px;
+}
+
+
+::-webkit-scrollbar-thumb:hover {
+   background-color: dimgray; 
 }
