--- a/BellaNapoli/BellaNapoli/Views/Shared/_Layout.cshtml
+++ b/BellaNapoli/BellaNapoli/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="~/Content/imgs/16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="~/Content/imgs/32x32.png">
     <link rel="icon" type="image/png" sizes="48x48" href="~/Content/imgs/48x48.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
 </head>
@@ -22,29 +23,41 @@
             <span class="navbar-toggler-icon border-0"></span>
         </button>
         <div class="collapse navbar-collapse d-md-inline-flex justify-content-between">
-            <ul class="navbar-nav ms-auto">
-                <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link fs-3 me-3" })</li>
-                <li>@Html.ActionLink("Storia", "Index", "Help", new { area = "" }, new { @class = "nav-link fs-3 me-3" })</li>
-                <li>@Html.ActionLink("Le nostre pizze", "Index", "Prodotti", new { area = "" }, new { @class = "nav-link fs-3 me-3" })</li>
+            <ul class="navbar-nav ms-auto d-flex align-items-center">
+                <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link fs-6 me-3" })</li>
+                <li>@Html.ActionLink("Storia", "Storia", "Home", new { area = "" }, new { @class = "nav-link fs-6 me-3" })</li>
+                <li>@Html.ActionLink("Le nostre pizze", "Index", "Prodotti", new { area = "" }, new { @class = "nav-link fs-6 me-3" })</li>
                 @if (User.Identity.IsAuthenticated)
                 {
-                    <li>@Html.ActionLink("Carrello", "Index", "Carrello", new { area = "" }, new { @class = "nav-link fs-3 me-3" })</li>
-                    <li>@Html.ActionLink("Logout", "Logout", "Home", new { area = "" }, new { @class = "nav-link fs-3 me-3" })</li>
+                    <li>@Html.ActionLink(" ", "Index", "Profilo", new { area = "" }, new { @class = "bi bi-person-lines-fill nav-link fs-4 me-3" })</li>
+                    
+                        var cart = (List<BellaNapoli.Models.Prodotti>)Session["cart"];
+                        var cartCount = cart?.Count ?? 0;
+                    
+                    <li>
+                        @Html.ActionLink(" ", "Index", "Carrello", new { area = "" }, new { @class = "bi bi-bag nav-link fs-5 me-3" })
+                        @if (cartCount > 0)
+                        {
+                            <span class="badge bg-danger position-absolute rounded-pill  d-none d-md-block" style="top: 20px; right: 95px;">@cartCount</span>
+                        }
+                    </li>
+                    <li>@Html.ActionLink("Logout", "Logout", "Home", new { area = "" }, new { @class = "nav-link fs-6 me-3" })</li>
                 }
                 else
                 {
-                    <li>@Html.ActionLink("Registrati", "Register", "Home", new { area = "" }, new { @class = "nav-link fs-3 me-3" })</li>
-                    <li>@Html.ActionLink("Login", "Login", "Home", new { area = "" }, new { @class = "nav-link fs-3 me-2" })</li>
+                    <li>@Html.ActionLink("Registrati", "Register", "Home", new { area = "" }, new { @class = "nav-link fs-6 me-3" })</li>
+                    <li>@Html.ActionLink("Login", "Login", "Home", new { area = "" }, new { @class = "nav-link fs-6 me-2" })</li>
                 }
             </ul>
         </div>
     </nav>
-    <div class="body-content">
+    <div class="body-content" style="padding-bottom: 120px">
         @RenderBody()
-        <footer id="footer">
-            <p class="p-5 text-center text-white m-0">Pizzeria BellaNapoli - Tutti i diritti riservati</p>
-        </footer>
     </div>
+
+    <footer id="footer">
+        <p class="p-5 text-center text-white m-0">Pizzeria BellaNapoli - Tutti i diritti riservati</p>
+    </footer>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
